# libSaSString

./: .DoxIgnore  .DoxPublicIgnore  .gitignore  COPYRIGHT.md  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libSaSString.msg
Documentation/: .gitignore  Doxyfile-private  Doxyfile-public  Makefile.am
include/: .gitignore  Makefile.am
include/SaS/String/: .gitignore  CopyRightNotice.h  ROString.hpp  String.hpp  StringCache.hpp  StringCompareOperator.hpp  StringLocale.hpp  msgCat2.hpp  msgcat.hpp  replaceText.hpp  search.h  strlower.h  strsearch.hpp  strupper.h
lib/: Makefile.am  ROString.cpp  String.cpp  StringCache.cpp  StringCat.cpp  StringCharmap.cpp  StringCharset.cpp  StringChr.cpp  StringCmp.cpp  StringCompareOperator.cpp  StringCpy.cpp  StringCspn.cpp  StringDup.cpp  StringIterator.cpp  StringLen.cpp  StringLocale.cpp  StringLocaleLcIdentification.cpp  StringLocaleLcMeasurement.cpp  StringLocaleLcMessages.cpp  StringLocaleLcNumeric.cpp  StringNCpy.cpp  StringPbrk.cpp  StringReplace.cpp  StringSeg.cpp  StringSpn.cpp  StringStr.cpp  StringSub.cpp  StringTok.cpp  msgCat2.cpp  msgcat.cpp  replaceText.cpp  strlower.c  strsearch.cpp  strupper.c
lib/FutureLocaleWork/: Portable.charset  StringLocaleLcAddress.cpp  StringLocaleLcCollate.cpp  StringLocaleLcCtype.cpp  StringLocaleLcMonentary.cpp  StringLocaleLcName.cpp  StringLocaleLcPaper.cpp  StringLocaleLcTelephone.cpp  StringLocaleLcTime.cpp
lib/i18n/charmaps/Make/: MakeUTF16CharMap.cpp
