INSTALL			= install -C -c
myincludedir		= $(prefix)/include/SaS/String

myinclude_HEADERS	= \
			SaS/String/CopyRightNotice.h \
			SaS/String/msgCat2.hpp \
			SaS/String/msgcat.hpp \
			SaS/String/replaceText.hpp \
			SaS/String/ROString.hpp \
			SaS/String/StringCache.hpp \
			SaS/String/StringCompareOperator.hpp \
			SaS/String/String.hpp \
			SaS/String/strlower.h \
			SaS/String/strsearch.hpp \
			SaS/String/strupper.h
